# ESP32

./: .gitignore  ca.crt  ca.key  ca.srl  client.crt  client.csr  client.key  server.crt  server.csr  server.key
ARCHIVE/json_generator/: CMakeLists.txt  component.mk
ARCHIVE/json_parser/: CMakeLists.txt  component.mk
ARCHIVE/onoff_client/: CMakeLists.txt  sdkconfig  sdkconfig.ci.bluedroid  sdkconfig.ci.bluedroid_deinit  sdkconfig.ci.model  sdkconfig.ci.nimble  sdkconfig.ci.nimble_deinit  sdkconfig.ci.proxy00  sdkconfig.ci.proxy01  sdkconfig.ci.proxy02  sdkconfig.ci.proxy03  sdkconfig.ci.proxy04  sdkconfig.ci.proxy05  sdkconfig.defaults  sdkconfig.defaults.esp32c3  sdkconfig.old
ARCHIVE/onoff_server/: CMakeLists.txt  (+9 more)
RTOS_simple_example/: CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig 2.old  sdkconfig.old
ble-mesh-custom-sensor-model-code/: README.md
ble-mesh-custom-sensor-model-code/examples/custom_sensor_client/main/: CMakeLists.txt  Kconfig.projbuild  board.h  main.c
blink_adv/: CMakeLists.txt
flash_encryption/: sdkconfig  sdkconfig.old
gatt_server/: sdkconfig
hello_world/: sdkconfig.old
http_request/: sdkconfig  sdkconfig.old
led_strip/: sdkconfig
nvs_rw_value/: partitions.csv  sdkconfig
onoff_client/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
onoff_server/: CMakeLists.txt  sdkconfig  sdkconfig.old
simple/: CMakeLists.txt  sdkconfig  sdkconfig 3
simple_ota_example/: partitions.csv  sdkconfig  sdkconfig 2  sdkconfig.old
softAP/: sdkconfig
ssl_mutual_auth/: CMakeLists.txt  sdkconfig
station/: sdkconfig
(+143 files in other folders)
